--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
 asgiref==3.5.2
+astroid==2.12.12
+black==22.10.0
+click==8.1.3
+colorama==0.4.6
+dill==0.3.6
 Django==4.1
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.10.1
+platformdirs==2.5.2
+pylint==2.15.5
 sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.5
 tzdata==2022.5
+wrapt==1.14.1
