--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ lazy-object-proxy==1.7.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.1
+Pillow==9.2.0
 platformdirs==2.5.2
 pylint==2.15.5
 sqlparse==0.4.3
